# log-analyzer_rust

./: .agent_memory.json  .clippy.toml  .gitattributes  .gitignore  .gitlab-ci.yml  .mcp.json  .trigger-ci  AGENTS.md  ARCHITECTURE_IMPROVEMENT_PLAN.md  AUDIT_PROGRESS.md  AUDIT_TODO.md  BUGFIX_SETTINGS_PAGE.md  CHANGELOG.md  CI_FIX_SUMMARY.md  CLAUDE.md  CLAUDE_DETAILED.md.bak  CLAUDE_IMPROVEMENTS.md  COMMIT_MESSAGE.txt  CONCURRENCY_SAFETY_SOLUTION.md  DEPLOYMENT_STATUS.md  FFI_REFACTOR_COMPLETE.md  FFI_REFACTOR_PLAN.md  FILE_FILTER_TEST_GUIDE.md  FIX_PLAN.md  IMPLEMENTATION_ROADMAP.md  Jenkinsfile  Makefile  NEXT_STEPS_PERFORMANCE_OPTIMIZATION.md  OPTIMIZATION_COMPLETE.md  PERFORMANCE_OPTIMIZATION_COMPLETION.md  PERFORMANCE_OPTIMIZATION_CURRENT_STATUS.md  PERFORMANCE_OPTIMIZATION_INTEGRATION_STATUS.md  PERFORMANCE_OPTIMIZATION_INTEGRATION_SUMMARY.md  PERFORMANCE_OPTIMIZATION_LATEST_UPDATE.md  PERFORMANCE_OPTIMIZATION_REMAINING_WORK.md  PERFORMANCE_OPTIMIZATION_RUN_STATUS.md  PERFORMANCE_OPTIMIZATION_USER_GUIDE.md  PERFORMANCE_OPTIMIZATION_VERIFICATION.md  PRD.md  README.md  (+30 more)
log-analyzer/src-tauri/: AGENTS.md  CLAUDE.md  Cargo.toml  ERROR_HANDLING_IMPLEMENTATION.md  MODULARIZATION_SUMMARY.md  Makefile  TASK_1_COMPLETION_SUMMARY.md  build.rs  cargo-deny.toml  clippy.toml  frb_codegen.yaml  proptest.toml  rust-toolchain.toml  rustfmt.toml  tarpaulin.toml  tauri.conf.json  test_debug.rs  test_unc.rs  windows-app.manifest
log-analyzer/src-tauri/.cargo/: config.toml
log-analyzer/src-tauri/.serena/: project.yml
log-analyzer/src-tauri/benches/: cache_benchmarks.rs  extraction_benchmarks.rs  m1_benchmark.rs  production_benchmarks.rs  production_validation_benchmarks.rs  search_benchmarks.rs  search_performance.rs  validation_benchmarks.rs
log-analyzer/src-tauri/binaries/: unrar-x86_64-unknown-linux-gnu
log-analyzer/src-tauri/capabilities/: default.json  external-open.json  file-dialog.json  main-window-core.json
log-analyzer/src-tauri/config/: extraction_policy.toml  extraction_policy.toml.example  performance.toml
log-analyzer/src-tauri/crates/la-archive/: AGENTS.md  Cargo.toml
log-analyzer/src-tauri/crates/la-core/: AGENTS.md  Cargo.toml
log-analyzer/src-tauri/crates/la-search/: AGENTS.md  Cargo.toml
log-analyzer/src-tauri/crates/la-storage/: AGENTS.md  Cargo.toml
log-analyzer/src-tauri/crates/log-lexer/: Cargo.toml
log-analyzer/src-tauri/crates/log-lexer-derive/: Cargo.toml
log-analyzer/src-tauri/migrations/: 20231221000001_create_path_mappings.sql  README.md  config_migration.rs  migrate_to_enhanced_archive.rs
log-analyzer/src-tauri/proptest-regressions/archive/: audit_logger_property_tests.txt  checkpoint_manager_property_tests.txt  edge_case_handlers_property_tests.txt  extraction_engine_property_tests.txt  path_manager_property_tests.txt  security_detector.txt
log-analyzer/src-tauri/proptest-regressions/monitoring/: property_tests.txt
log-analyzer/src-tauri/proptest-regressions/search_engine/: property_tests.txt
log-analyzer/src-tauri/proptest-regressions/storage/: metadata_store.txt
log-analyzer/src-tauri/proptest-regressions/utils/: auto_tuning_property_tests.txt  cache_manager.txt  cache_property_tests.txt  validation_property_tests.txt
log-analyzer/src-tauri/src/: AGENTS.md  error.rs  frb_generated.rs  lib.rs  main.rs  proptest_strategies.rs  standalone.rs
log-analyzer/src-tauri/src/adapters/: mod.rs  tauri_config.rs
log-analyzer/src-tauri/src/application/: commands.rs  config.rs  export.rs  import.rs  mod.rs  plugins.rs  search.rs  search_batch.rs  search_executor.rs  search_filters.rs  search_session.rs  virtual_tree.rs  watch.rs  workspace.rs  workspace_service.rs
log-analyzer/src-tauri/src/archive/: AGENTS.md  CLAUDE.md  archive_handler.rs  archive_handler_base.rs  audit_logger.rs  audit_logger_property_tests.rs  checkpoint_manager.rs  checkpoint_manager_property_tests.rs  compression_analyzer.rs  context.rs  edge_case_handlers.rs  edge_case_handlers_property_tests.rs  extraction_config.rs  extraction_context_property_tests.rs  extraction_engine.rs  extraction_engine_property_tests.rs  extraction_error.rs  extraction_orchestrator.rs  extraction_orchestrator_property_tests.rs  extraction_service.rs  gz.rs  gz_handler.rs  mod.rs  nested_archive_config.rs  parallel_processor.rs  path_manager.rs  path_manager_property_tests.rs  path_tracker.rs  path_validator.rs  processor.rs  progress_reporter.rs  progress_tracker.rs  progress_tracker_property_tests.rs  public_api.rs  public_api_property_tests.rs  rar.rs  rar_handler.rs  resource_manager.rs  resource_manager_property_tests.rs  security_detector.rs  (+6 more)
log-analyzer/src-tauri/src/benchmark/: mod.rs
log-analyzer/src-tauri/src/commands/: AGENTS.md  archive.rs  async_search.rs  cache.rs  config.rs  error_reporting.rs  export.rs  (+17 more)
log-analyzer/src-tauri/tests/: README.md  REDIS_INTEGRATION_TEST_SUMMARY.md  SECURITY_TESTING_GUIDE.md  advanced_features_tests.rs  archive_integration_tests.rs  archive_manager_integration.rs  archive_manager_integration_tests.rs  archive_processing_integration.proptest-regressions  archive_processing_integration.rs  async_context_property_tests.rs  cas_concurrent_tests.rs  cas_helpers_usage_example.rs  cas_migration_property_tests.proptest-regressions  cas_migration_property_tests.rs  cas_performance_tests.rs  cas_test_helpers.rs  checkpoint_integration_tests.rs  comprehensive_property_tests.proptest-regressions  comprehensive_property_tests.rs  concurrency_safety_tests.proptest-regressions  concurrency_safety_tests.rs  cross_platform_compatibility.rs  dependency_management_tests.rs  e2e_validation.rs  error_handling_integration.rs  error_handling_test.rs  error_recovery_tests.rs  event_system_integration.rs  ffi_integration_tests.rs  fix_entry.sed  helper_functions.rs  migration_tests.rs  nested_archive_detection_test.rs  parallel_performance_tests.rs  performance_integration_tests.proptest-regressions  performance_integration_tests.rs  performance_regression_tests.rs  performance_validation_tests.rs  production_systems_integration.rs  proptest_strategies.rs  (+14 more)
(+1346 files in other folders)
