[package]
name = "log-analyzer"
version = "1.2.47"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-opener = "2.5"
tauri-plugin-dialog = "2.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.0", features = ["v4", "serde"] }
regex = "1.11"          # 正则表达式库
aho-corasick = "1.1"     # 多模式匹配算法（搜索性能优化）
chrono = { version = "0.4", features = ["serde"] }  # 时间序列化支持
walkdir = "2.4"
tempfile = "3.10"
zip = "0.6"
tar = "0.4"
flate2 = "1.0"
mime_guess = "2.0"
encoding_rs = "0.8"
tokio = { version = "1", features = ["full"] }
bincode = "1.3"
rayon = "1.8"  # 并行处理
dunce = "1.0"   # Windows 路径规范化（UNC路径处理）
lru = "0.12"    # LRU 缓存（搜索结果缓存）
notify = "6.1"  # 文件系统监听
unicode-normalization = "0.1"  # Unicode规范化
thiserror = "1.0"  # 错误处理
async-trait = "0.1"  # 异步trait支持
sysinfo = { version = "0.31", default-features = true }
once_cell = "1.20"  # 延迟初始化静态变量

# Phase 1: Industry-Standard Error Handling & Logging
eyre = "0.6"  # 现代错误处理
color-eyre = "0.6"  # 增强错误报告
miette = { version = "5.0", features = ["fancy"] }  # 用户友好的错误诊断
tracing = "0.1"  # 结构化日志和追踪
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }  # 日志订阅器
tracing-appender = "0.2"  # 日志文件轮转
sentry = { version = "0.32", features = ["tracing"] }  # 错误监控

# Phase 1: High-Performance Concurrency
parking_lot = { version = "0.12", features = ["arc_lock", "send_guard"] }  # 高性能锁
crossbeam = "0.8"  # 无锁数据结构
tokio-util = { version = "0.7", features = ["rt"] }  # 异步工具和取消令牌

# Phase 2: Enterprise-Grade Caching
moka = { version = "0.12", features = ["future", "sync"] }  # 企业级缓存系统

# Rate limiting using governor (industry-standard)
governor = { version = "0.6", features = ["std"] }  # 速率限制器
nonzero_ext = "0.3"  # 辅助库，用于 governor

# Phase 2: High-Performance Search Engine
tantivy = { version = "0.22", features = ["mmap"] }  # Rust 原生全文搜索引擎
roaring = "0.10"  # 高效位图索引

# Phase 2: Real-time State Synchronization
# Note: WebSocket dependencies removed - using Tauri native events for IPC
# Tauri's built-in event system provides <10ms latency without external dependencies
# tokio-tungstenite = "0.21"  # WebSocket - REMOVED
# futures-util = "0.3"        # WebSocket streams - REMOVED
futures = "0.3"  # 异步工具（join_all 等）

# Phase 3: Production Validation Framework
validator = { version = "0.18", features = ["derive"] }  # 结构化验证框架
sanitize-filename = "0.5"  # 文件名安全化

# Phase 3: Automatic Resource Management
scopeguard = "1.2"  # RAII模式和自动资源清理

# Phase 4: Configuration Management
config = "0.14"  # 行业标准配置管理（多层配置、env支持）
rmp-serde = "1.1"  # MessagePack 序列化（高性能二进制传输）
toml = "0.8"  # TOML 配置文件解析
dashmap = "5.5"  # 并发哈希映射
sha2 = "0.10"  # SHA-256 哈希算法
libc = "0.2"  # Unix 系统调用 (磁盘空间检查)
rustix = { version = "0.38", features = ["fs", "std"] }  # 安全文件系统操作 (O_NOFOLLOW)
tokio-retry = "0.3"
async-compression = { version = "0.4", features = ["tokio", "gzip", "zstd"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"] }
num_cpus = "1.16"

# Phase 5: Archive Support (Pure Rust Priority)
unrar = { version = "0.5", optional = true }  # libunrar C bindings
sevenz-rust = "0.5"  # Pure Rust 7z support
async_zip = { version = "0.0.17", features = ["full"] }
tokio-tar = "0.3"
bytes = "1.0"

# Monitoring and Observability
tracing-opentelemetry = "0.24"  # OpenTelemetry集成
opentelemetry = "0.23"  # 分布式追踪
opentelemetry-jaeger = "0.22"  # Jaeger导出器
prometheus = "0.13"  # 指标收集
metrics = "0.22"  # 应用指标

# Plugin system
libloading = "0.8"  # 动态库加载（插件系统）

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Storage_FileSystem", "Win32_Foundation"] }  # Windows 系统调用

[features]
default = ["rar-support"]
rar-support = ["dep:unrar"]
test = []  # 用于测试时的 mock 功能

# Phase 4: Testing Infrastructure
[dev-dependencies]
rstest = "0.18"  # 增强的单元测试框架
proptest = { version = "1.4", default-features = false, features = ["std"] }  # 属性测试框架
criterion = { version = "0.5", features = ["html_reports"] }  # 性能基准测试
tokio-test = "0.4"  # 异步测试工具
