[workspace]
members = [
    "crates/la-core",
    "crates/la-storage",
    "crates/la-search",
    "crates/la-archive",
]
resolver = "2"

[workspace.dependencies]
# 公共基础依赖
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs", "io-util", "time", "net", "process"] }
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.11"
tempfile = "3.10"
walkdir = "2.4"
dunce = "1.0.5"

[package]
name = "log-analyzer"
version = "1.2.61"
description = "A desktop log analysis tool built with Tauri, React, and TypeScript"
authors = ["ashllll"]
edition = "2021"
homepage = "https://github.com/ashllll/log-analyzer_rust#readme"
repository = "https://github.com/ashllll/log-analyzer_rust"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Workspace crates
la-core = { path = "crates/la-core" }
la-storage = { path = "crates/la-storage" }
la-search = { path = "crates/la-search" }
la-archive = { path = "crates/la-archive" }

tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde.workspace = true
serde_json.workspace = true
uuid = { version = "1.16", features = ["v4", "serde"] }
regex.workspace = true
aho-corasick = "1.1"
memchr = "2.8"
fancy-regex = "0.18"
simdutf8 = "0.1"
chrono.workspace = true
walkdir.workspace = true
tempfile.workspace = true
zip = "2.2"
tar = "0.4.45"
flate2 = "1.0"
mime_guess = "2.0"
encoding_rs = "0.8"
tokio.workspace = true

rayon = "1.8"
dunce.workspace = true
lru = "0.16"
notify = "6.1"
unicode-normalization = "0.1"
thiserror = "1.0"
async-trait = "0.1"
once_cell = "1.20"
tracing.workspace = true

# Phase 1: Industry-Standard Error Handling & Logging
eyre = "0.6"
color-eyre = "0.6"
miette = { version = "7", features = ["fancy"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
sentry = { version = "0.32", features = ["tracing"] }

# Phase 1: High-Performance Concurrency
parking_lot = { version = "0.12", features = ["arc_lock", "send_guard"] }
crossbeam = "0.8"
tokio-util = { version = "0.7", features = ["rt"] }

# Phase 2: Enterprise-Grade Caching
moka = { version = "0.12", features = ["future", "sync"] }

# Rate limiting using governor (industry-standard)
governor = { version = "0.6", features = ["std"] }
nonzero_ext = "0.3"

# Phase 2: High-Performance Search Engine
tantivy = { version = "0.22", features = ["mmap"] }
roaring = "0.10"

# Phase 2: Real-time State Synchronization
futures = "0.3"

# Phase 3: Production Validation Framework
validator = { version = "0.19", features = ["derive"] }
sanitize-filename = "0.5"

# Phase 3: Automatic Resource Management
scopeguard = "1.2"

# Phase 4: Configuration Management
config = "0.15"
rmp-serde = "1.1"
toml = "0.8"
dashmap = "6"
sha2 = "0.10"
libc = "0.2"
rustix = { version = "0.38", features = ["fs", "std"] }
tokio-retry = "0.3"
async-compression = { version = "0.4", features = ["tokio", "gzip", "zstd"] }
sqlx = { version = "0.8.1", features = ["runtime-tokio-rustls", "sqlite"] }
num_cpus = "1.16"

# Phase 5: Archive Support (Pure Rust Priority)
unrar = { version = "0.5", optional = true }
sevenz-rust = "0.5"
async_zip = { version = "=0.0.18", features = ["full"] }
bytes = "1.0"

# Plugin system
libloading = "0.8"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Storage_FileSystem", "Win32_Foundation"] }

[features]
default = ["rar-support"]
rar-support = ["dep:unrar"]
test = []

# Phase 4: Testing Infrastructure
[dev-dependencies]
rstest = "0.18"
proptest = { version = "1.4", default-features = false, features = ["std"] }
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"
