[package]
name = "la-archive"
version = "1.2.53"
edition = "2021"

[dependencies]
# Workspace crates
la-core = { path = "../la-core" }
la-storage = { path = "../la-storage" }

# 压缩格式支持
zip = "2.2"
tar = "0.4.45"
flate2 = "1.0"
async_zip = { version = "0.0.18", features = ["full"] }
tokio-tar = "0.3"
sevenz-rust = "0.5"
unrar = { version = "0.5", optional = true }

# 异步
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
async-compression = { version = "0.4", features = ["tokio", "gzip", "zstd"] }

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1.0"

# 并发
dashmap = "6"
parking_lot = { version = "0.12", features = ["arc_lock"] }

# 缓存
moka = { version = "0.12", features = ["sync"] }

# 异步工具
tokio-util = { version = "0.7", features = ["rt"] }

# 日志
tracing = "0.1"

# 文件系统
walkdir = "2.4"
tempfile = "3.10"

# 时间
chrono = { version = "0.4", features = ["serde"] }

# 正则
regex = "1.11"
once_cell = "1.20"

# 编码检测
encoding_rs = "0.8"
mime_guess = "2.0"

# 工具
scopeguard = "1.2"
sha2 = "0.10"
unicode-normalization = "0.1"
num_cpus = "1.16"
dunce = "1.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Storage_FileSystem", "Win32_Foundation"] }

[features]
default = ["rar-support"]
rar-support = ["dep:unrar"]

[dev-dependencies]
proptest = { version = "1.4", default-features = false, features = ["std"] }
tempfile = "3"
