[package]
name = "la-core"
version = "1.2.53"
edition = "2021"

[dependencies]
# 错误处理
thiserror = "1.0"
miette = { version = "7", features = ["fancy"] }

# 序列化
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"

# 异步 trait
async-trait = "0.1"

# 时间
chrono = { version = "0.4", features = ["serde"] }

# 验证
validator = { version = "0.19", features = ["derive"] }
sanitize-filename = "0.5"

# 配置
config = "0.15"
toml = "0.8"

# 正则（用于 parsers）
regex = "1.11"
once_cell = "1.20"

# UUID
uuid = { version = "1.16", features = ["v4", "serde"] }

# 日志
tracing = "0.1"

# 异步运行时（用于 policy_manager 等）
tokio = { version = "1", features = ["full"] }

# 数量
num_cpus = "1.16"

# Unicode 规范化（用于路径验证）
unicode-normalization = "0.1"

[dev-dependencies]
proptest = { version = "1.4", default-features = false, features = ["std"] }
tempfile = "3"
