[package]
name = "la-core"
version = "1.2.60"
edition = "2021"

[dependencies]
# 错误处理
thiserror = "1.0"
miette = { version = "7", features = ["fancy"] }

# 序列化
serde.workspace = true
serde_json.workspace = true

# 异步 trait
async-trait = "0.1"

# 时间
chrono.workspace = true

# 验证
validator = { version = "0.19", features = ["derive"] }
sanitize-filename = "0.5"

# 配置
config = "0.15"
toml = "0.8"

# 正则（用于 parsers）
regex.workspace = true
once_cell = "1.20"

# UUID
uuid = { version = "1.16", features = ["v4", "serde"] }

# 日志
tracing.workspace = true

# 异步运行时（用于 policy_manager 等）
tokio.workspace = true

# 数量
num_cpus = "1.16"

# Unicode 规范化（用于路径验证）
unicode-normalization = "0.1"

[dev-dependencies]
proptest = { version = "1.4", default-features = false, features = ["std"] }
tempfile.workspace = true
