[package]
name = "la-search"
version = "1.2.60"
edition = "2021"

[dependencies]
la-core = { path = "../la-core" }

tantivy = { version = "0.22", features = ["mmap"] }
aho-corasick = "1.1"
regex.workspace = true
rayon = "1.8"
tokio.workspace = true
tokio-util = { version = "0.7", features = ["rt"] }
serde.workspace = true
serde_json.workspace = true
parking_lot = { version = "0.12", features = ["arc_lock", "send_guard"] }
tracing.workspace = true
roaring = "0.10"
crossbeam = "0.8"
lru = "0.16"
futures = "0.3"
tempfile.workspace = true
chrono.workspace = true
thiserror = "1.0"

dashmap = "6"
num_cpus = "1.16"
once_cell = "1.20"

[dev-dependencies]
proptest = { version = "1.4", default-features = false, features = ["std"] }
