[package]
name = "la-storage"
version = "1.2.53"
edition = "2021"

[dependencies]
la-core = { path = "../la-core" }

# 异步
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# 缓存和哈希
moka = { version = "0.12", features = ["sync"] }
sha2 = "0.10"
walkdir = "2.4"
dashmap = "5.5"

# 数据库
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"] }

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
rmp-serde = "1.1"

# 高性能锁
parking_lot = { version = "0.12", features = ["arc_lock", "send_guard"] }

# 时间
chrono = { version = "0.4", features = ["serde"] }

# 日志
tracing = "0.1"

# 工具
scopeguard = "1.2"
tempfile = "3.10"
libc = "0.2"
rustix = { version = "0.38", features = ["fs", "std"] }

# UUID (cas.rs 中 store_file_zero_copy 使用)
uuid = { version = "1.0", features = ["v4"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Storage_FileSystem", "Win32_Foundation"] }

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
proptest = { version = "1.4", default-features = false, features = ["std"] }
