[package]
name = "la-storage"
version = "1.2.61"
edition = "2021"

[dependencies]
la-core = { path = "../la-core" }

# 异步
async-trait = "0.1"
tokio.workspace = true
futures = "0.3"

# 缓存和哈希
moka = { version = "0.12", features = ["sync"] }
sha2 = "0.10"
walkdir.workspace = true
dashmap = "6"

# 数据库
sqlx = { version = "0.8.1", features = ["runtime-tokio-rustls", "sqlite"] }

# 序列化
serde.workspace = true
serde_json.workspace = true

rmp-serde = "1.1"

# 高性能锁
parking_lot = { version = "0.12", features = ["arc_lock", "send_guard"] }

# 时间
chrono.workspace = true

# 日志
tracing.workspace = true

# 工具
scopeguard = "1.2"
tempfile.workspace = true
libc = "0.2"
memmap2 = "0.9"
rustix = { version = "0.38", features = ["fs", "std"] }

# UUID (cas.rs 中 store_file_zero_copy 使用)
uuid = { version = "1.16", features = ["v4"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Storage_FileSystem", "Win32_Foundation"] }

[dev-dependencies]
tempfile.workspace = true
tokio-test = "0.4"
proptest = { version = "1.4", default-features = false, features = ["std"] }
